--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title> SHREK </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <img src="logo.jpg" alt="">
-      <h1>Kailane Correia Schneider</h1>
-      <h2>tenho 16 anos </h2>
-      <h3>estudante do colégio Wilson Joffre </h3>
-      <h4>área de matematica e ciencias da natureza </h4>
-      <h5>Entrei na escola do primeiro ano do novo ensino medio para jogar escolares pela instituição, estou no segundo ano do novo ensino medio atualmente, escolhi o itinerario de matematica e ciencias da natureza. Antes de estudar aqui eu estudava no colegio Horacio Ribeiro Dos Reis desde o sexto ano do fundamental.
+      <h1 class="nome">Kailane Correia Schneider</h1>
+      <ul>
+        <li>pagina inicial</li>
+        <li>fotos</li>
+        <li>redes sociais</li>
+      </ul>
     </header>
+      <section class="textoprincipal">
+        <h2>tenho 16 anos</h2>
+        <h3>estudante do colégio Wilson Joffre </h3>
+        <h4>área de matematica e ciencias da natureza </h4>
+        <h5>Entrei na escola do primeiro ano do novo ensino medio para jogar escolares pela instituição, estou no segundo ano do novo ensino medio atualmente, escolhi o itinerario de matematica e ciencias da natureza. Antes de estudar aqui eu estudava no colegio Horacio Ribeiro Dos Reis desde o sexto ano do fundamental.
+      </section>
 
-  </body>
+</body>
 </html>
