--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kailane Correia Schneider</title>
     <link rel="stylesheet" href="style.css">
-    <meta charset="utf-8">
-    <title> SHREK </title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <img src="logo.jpg" alt="">
-      <h1 class="nome">Kailane Correia Schneider</h1>
-      <ul>
-        <li>pagina inicial</li>
-        <li>fotos</li>
-        <li>redes sociais</li>
-      </ul>
-    </header>
-      <section class="textoprincipal">
-        <h2>tenho 16 anos</h2>
-        <h3>estudante do colégio Wilson Joffre </h3>
-        <h4>área de matematica e ciencias da natureza </h4>
-        <h5>Entrei na escola do primeiro ano do novo ensino medio para jogar escolares pela instituição, estou no segundo ano do novo ensino medio atualmente, escolhi o itinerario de matematica e ciencias da natureza. Antes de estudar aqui eu estudava no colegio Horacio Ribeiro Dos Reis desde o sexto ano do fundamental.
-      </section>
-
+</head>
+<body>
+    <img class="foto1" src="foto1.jpeg" alt="foto1">
+    <h1 class="titulo"> Kailane Correia Schneider </h1>
+    <li class="lista"> Tenho 16 anos. 
+        Estudante do Wilson Joffre. 
+        Área de matemática e ciências da natureza.
+    </li>
+    <img class="foto2" src="foto2.jpeg" alt="foto2">
+    <h2 class="texto1"> Entrei na escola do primeiro ano do novo ensino médio para jogar escolares pela instituição, estou no segundo ano do novo ensino médio atualmente, escolhi o itinerário de matematica e ciencias da natureza. Antes de estudar aqui eu estudava no colegio Horácio Ribeiro Dos Reis desde o sexto ano do fundamental.</h2>
+    <img class="insta" src="Instagram.png" alt="insta">
+     <a class="ig" href="https://www.instagram.com/kaicorreiaa/">@kaicorreiaa</a>
 </body>
 </html>
